--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dac6c6a4",
+   "id": "91953079",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "29c31437",
+   "id": "117ec375",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d89b172e",
+   "id": "d2b68df7",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4c9bdb89",
+   "id": "06f6e2cd",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bdb0a64",
+   "id": "8f0a4503",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "9eadc62b",
+   "id": "5189b0f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a961b834",
+   "id": "734adb5c",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "0f4d6cc9",
+   "id": "c3784957",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "2dc4937b",
+   "id": "e90dd1b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "964faaca",
+   "id": "bed26df4",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8e48e700",
+   "id": "5419a4ee",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4416a706",
+   "id": "331a0f9a",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "1a239c97",
+   "id": "bca2ae8d",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "990c13ea",
+   "id": "cdeeff44",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "8160abf0",
+   "id": "c7b9e20e",
    "metadata": {
     "scrolled": false
    },
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "6cb4d571",
+   "id": "2012cce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "dfa6ed0c",
+   "id": "97af1319",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "01d72799",
+   "id": "3c26d8c1",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "ff5f8b93",
+   "id": "d2709252",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "315e0d7a",
+   "id": "81cbfc99",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "32723302",
+   "id": "90c46a52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "85d7f594",
+   "id": "4ee5d409",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "21662db9",
+   "id": "ed1676ad",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "0b91256a",
+   "id": "5eaf708a",
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "ad1307d8",
+   "id": "15bf8a89",
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,8 @@
     "        print(\"une methode dans mere\")\n",
     "    \n",
     "class Fille(Mere):\n",
-    "    pass\n",
+    "    def une_methode(self):\n",
+    "        print(\"une methode dans mere\")\n",
     "\n",
     "m = Mere()\n",
     "m.une_methode()"
@@ -701,27 +702,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
-   "id": "8a93d7d0",
+   "execution_count": 149,
+   "id": "027000a4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dans mere\n"
+      "dans mere\n",
+      "une methode dans mere\n"
      ]
     }
    ],
    "source": [
     "f = Fille()\n",
-    "f.un"
+    "f.une_methode()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18d34944",
+   "id": "6028f76c",
    "metadata": {},
    "outputs": [],
    "source": []
