--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "91953079",
+   "id": "504639f0",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "117ec375",
+   "id": "58e8fd58",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2b68df7",
+   "id": "1e445b44",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "06f6e2cd",
+   "id": "0d83f93b",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f0a4503",
+   "id": "ee9e6bc9",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "5189b0f8",
+   "id": "e00e421d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "734adb5c",
+   "id": "506a8e04",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "c3784957",
+   "id": "888311ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "e90dd1b9",
+   "id": "ccffe85f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "bed26df4",
+   "id": "c05d24ec",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "5419a4ee",
+   "id": "ae598c2a",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "331a0f9a",
+   "id": "9e7121dc",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "bca2ae8d",
+   "id": "7ea9dc62",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "cdeeff44",
+   "id": "61dc9349",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "c7b9e20e",
+   "id": "e534e529",
    "metadata": {
     "scrolled": false
    },
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "2012cce0",
+   "id": "b6e9a29e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "97af1319",
+   "id": "8f566eca",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "3c26d8c1",
+   "id": "cd38d854",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "d2709252",
+   "id": "489b90ce",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "81cbfc99",
+   "id": "3e4c87fc",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "90c46a52",
+   "id": "0e2b2972",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "4ee5d409",
+   "id": "64c8ce06",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "ed1676ad",
+   "id": "a78fb8ec",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "5eaf708a",
+   "id": "8a18a39c",
    "metadata": {},
    "outputs": [
     {
@@ -671,8 +671,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "id": "15bf8a89",
+   "execution_count": 153,
+   "id": "34f90ce6",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,8 @@
      "output_type": "stream",
      "text": [
       "dans mere\n",
-      "une methode dans mere\n"
+      "une methode dans mere\n",
+      "mere\n"
      ]
     }
    ],
@@ -688,22 +689,24 @@
     "class Mere:\n",
     "    def __init__(self):\n",
     "        print(\"dans mere\")\n",
+    "        self.est_cree_par = \"mere\"\n",
     "    \n",
     "    def une_methode(self):\n",
     "        print(\"une methode dans mere\")\n",
     "    \n",
-    "class Fille(Mere):\n",
+    "class Fille(Mere):    \n",
     "    def une_methode(self):\n",
-    "        print(\"une methode dans mere\")\n",
+    "        print(\"une methode dans fille\")\n",
     "\n",
     "m = Mere()\n",
-    "m.une_methode()"
+    "m.une_methode()\n",
+    "print(m.est_cree_par)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "id": "027000a4",
+   "execution_count": 151,
+   "id": "0dfa0f64",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +714,7 @@
      "output_type": "stream",
      "text": [
       "dans mere\n",
-      "une methode dans mere\n"
+      "une methode dans fille\n"
      ]
     }
    ],
@@ -723,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6028f76c",
+   "id": "5ef76f3e",
    "metadata": {},
    "outputs": [],
    "source": []
