--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "504639f0",
+   "id": "2667a325",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "58e8fd58",
+   "id": "369a2da4",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e445b44",
+   "id": "dd38305c",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0d83f93b",
+   "id": "77068c9c",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee9e6bc9",
+   "id": "fe5b2f0b",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e00e421d",
+   "id": "4f17ef9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "506a8e04",
+   "id": "c57a13c8",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "888311ec",
+   "id": "a8ec88e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "ccffe85f",
+   "id": "5b7fc440",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "c05d24ec",
+   "id": "4cd8c43f",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "ae598c2a",
+   "id": "8c67cd1a",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e7121dc",
+   "id": "3535b8eb",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "7ea9dc62",
+   "id": "39c2e120",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "61dc9349",
+   "id": "7da518cf",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "e534e529",
+   "id": "d0bc0098",
    "metadata": {
     "scrolled": false
    },
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "b6e9a29e",
+   "id": "e7a6f5a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "8f566eca",
+   "id": "b9153be1",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "cd38d854",
+   "id": "8a99e0e2",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "489b90ce",
+   "id": "2e44a853",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "3e4c87fc",
+   "id": "eb2eae18",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "0e2b2972",
+   "id": "785765e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "64c8ce06",
+   "id": "73f5652d",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "a78fb8ec",
+   "id": "e101bef7",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "8a18a39c",
+   "id": "b941b498",
    "metadata": {},
    "outputs": [
     {
@@ -671,8 +671,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "34f90ce6",
+   "execution_count": 155,
+   "id": "a4ee03dd",
    "metadata": {},
    "outputs": [
     {
@@ -695,6 +695,9 @@
     "        print(\"une methode dans mere\")\n",
     "    \n",
     "class Fille(Mere):    \n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
     "    def une_methode(self):\n",
     "        print(\"une methode dans fille\")\n",
     "\n",
@@ -705,28 +708,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "id": "0dfa0f64",
+   "execution_count": 156,
+   "id": "dd4ffb6e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dans mere\n",
       "une methode dans fille\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Fille' object has no attribute 'est_cree_par'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [156], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m f \u001b[38;5;241m=\u001b[39m Fille()\n\u001b[1;32m      2\u001b[0m f\u001b[38;5;241m.\u001b[39mune_methode()\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(f\u001b[38;5;241m.\u001b[39mest_cree_par)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Fille' object has no attribute 'est_cree_par'"
      ]
     }
    ],
    "source": [
     "f = Fille()\n",
-    "f.une_methode()"
+    "f.une_methode()\n",
+    "print(f.est_cree_par)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ef76f3e",
+   "id": "cd7f444a",
    "metadata": {},
    "outputs": [],
    "source": []
