--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2667a325",
+   "id": "b6db612a",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "369a2da4",
+   "id": "c835dff4",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd38305c",
+   "id": "d5cbbe36",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "77068c9c",
+   "id": "577ff4a1",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe5b2f0b",
+   "id": "d1a96dcb",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4f17ef9c",
+   "id": "bf7dba16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "c57a13c8",
+   "id": "99f69081",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "a8ec88e3",
+   "id": "4f504e52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "5b7fc440",
+   "id": "91b589dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "4cd8c43f",
+   "id": "30ab36c0",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8c67cd1a",
+   "id": "8dc572d6",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3535b8eb",
+   "id": "b9d76ad1",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "39c2e120",
+   "id": "9ac4b45b",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "7da518cf",
+   "id": "ac45d511",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "d0bc0098",
+   "id": "4a05fd6b",
    "metadata": {
     "scrolled": false
    },
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "e7a6f5a0",
+   "id": "48119fe7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "b9153be1",
+   "id": "23adcbe8",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "8a99e0e2",
+   "id": "8a89dbc8",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "2e44a853",
+   "id": "31e5aefe",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "eb2eae18",
+   "id": "6085f1f2",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "785765e0",
+   "id": "7ca2b3ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "73f5652d",
+   "id": "46f041f3",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "e101bef7",
+   "id": "ffed419f",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "b941b498",
+   "id": "11a5c25b",
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "a4ee03dd",
+   "id": "1fa27a9c",
    "metadata": {},
    "outputs": [
     {
@@ -689,14 +689,15 @@
     "class Mere:\n",
     "    def __init__(self):\n",
     "        print(\"dans mere\")\n",
-    "        self.est_cree_par = \"mere\"\n",
+    "        self.est_cree_par_mere = True\n",
     "    \n",
     "    def une_methode(self):\n",
     "        print(\"une methode dans mere\")\n",
     "    \n",
     "class Fille(Mere):    \n",
     "    def __init__(self):\n",
-    "        pass\n",
+    "        super().__init__()\n",
+    "        \n",
     "    \n",
     "    def une_methode(self):\n",
     "        print(\"une methode dans fille\")\n",
@@ -709,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "dd4ffb6e",
+   "id": "5e7674ec",
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd7f444a",
+   "id": "d8cdfe64",
    "metadata": {},
    "outputs": [],
    "source": []
