--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b6db612a",
+   "id": "153e035e",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c835dff4",
+   "id": "0d427f9e",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5cbbe36",
+   "id": "b8068cef",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "577ff4a1",
+   "id": "ac2194a9",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1a96dcb",
+   "id": "17d4703d",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "bf7dba16",
+   "id": "64ae2d7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "99f69081",
+   "id": "467751cd",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "4f504e52",
+   "id": "80d8e5a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "91b589dc",
+   "id": "8e4aba13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "30ab36c0",
+   "id": "22b488c0",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8dc572d6",
+   "id": "3d983b8c",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9d76ad1",
+   "id": "7b137c72",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "9ac4b45b",
+   "id": "d9a546f4",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "ac45d511",
+   "id": "a4436519",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "4a05fd6b",
+   "id": "f9c973d4",
    "metadata": {
     "scrolled": false
    },
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "48119fe7",
+   "id": "28fc082c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "23adcbe8",
+   "id": "f11c257b",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "8a89dbc8",
+   "id": "26af97b3",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "31e5aefe",
+   "id": "ec0f9d44",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "6085f1f2",
+   "id": "2d0799c3",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "7ca2b3ed",
+   "id": "0bfa5d7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "46f041f3",
+   "id": "437aee01",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "ffed419f",
+   "id": "23d8acfd",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "11a5c25b",
+   "id": "f32e02e7",
    "metadata": {},
    "outputs": [
     {
@@ -671,24 +671,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "1fa27a9c",
+   "execution_count": 157,
+   "id": "b91b1506",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dans mere\n",
+      "dans init mere\n",
       "une methode dans mere\n",
-      "mere\n"
+      "True\n"
      ]
     }
    ],
    "source": [
     "class Mere:\n",
     "    def __init__(self):\n",
-    "        print(\"dans mere\")\n",
+    "        print(\"dans init mere\")\n",
     "        self.est_cree_par_mere = True\n",
     "    \n",
     "    def une_methode(self):\n",
@@ -697,20 +697,21 @@
     "class Fille(Mere):    \n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        \n",
+    "        print(\"dans init fille\")\n",
+    "        self.est_cree_par_fille = True\n",
     "    \n",
     "    def une_methode(self):\n",
     "        print(\"une methode dans fille\")\n",
     "\n",
     "m = Mere()\n",
     "m.une_methode()\n",
-    "print(m.est_cree_par)"
+    "print(m.est_cree_par_mere)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "5e7674ec",
+   "id": "e564f066",
    "metadata": {},
    "outputs": [
     {
@@ -735,13 +736,14 @@
    "source": [
     "f = Fille()\n",
     "f.une_methode()\n",
-    "print(f.est_cree_par)"
+    "print(f.est_cree_par_mere)\n",
+    "print(f.est_cree_par_fille)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8cdfe64",
+   "id": "70fd9909",
    "metadata": {},
    "outputs": [],
    "source": []
