--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "153e035e",
+   "id": "a04dbfaa",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0d427f9e",
+   "id": "ab7c702f",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8068cef",
+   "id": "b0b10671",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ac2194a9",
+   "id": "85c0a174",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17d4703d",
+   "id": "780e5d39",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "64ae2d7c",
+   "id": "13b55a61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "467751cd",
+   "id": "7e943f4e",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "80d8e5a4",
+   "id": "ba5e0060",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8e4aba13",
+   "id": "5b4fe148",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "22b488c0",
+   "id": "f6441e12",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "3d983b8c",
+   "id": "343788f0",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b137c72",
+   "id": "94e0b883",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d9a546f4",
+   "id": "aa9ddfbe",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "a4436519",
+   "id": "d995656f",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "f9c973d4",
+   "id": "e1eb141b",
    "metadata": {
     "scrolled": false
    },
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "28fc082c",
+   "id": "df1483ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "f11c257b",
+   "id": "867a6be7",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "26af97b3",
+   "id": "7e36f60f",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "ec0f9d44",
+   "id": "781be0f6",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "2d0799c3",
+   "id": "0293af75",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "0bfa5d7a",
+   "id": "3e1c8d48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "437aee01",
+   "id": "9ddfd40f",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "23d8acfd",
+   "id": "8af2fd0a",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "f32e02e7",
+   "id": "8a941977",
    "metadata": {},
    "outputs": [
     {
@@ -671,8 +671,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "id": "b91b1506",
+   "execution_count": 160,
+   "id": "bbffe39f",
    "metadata": {},
    "outputs": [
     {
@@ -682,6 +682,17 @@
       "dans init mere\n",
       "une methode dans mere\n",
       "True\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Mere' object has no attribute 'est_cree_par_fille'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [160], line 21\u001b[0m\n\u001b[1;32m     19\u001b[0m m\u001b[38;5;241m.\u001b[39mune_methode()\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(m\u001b[38;5;241m.\u001b[39mest_cree_par_mere)\n\u001b[0;32m---> 21\u001b[0m \u001b[38;5;28mprint\u001b[39m(m\u001b[38;5;241m.\u001b[39mest_cree_par_fille)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Mere' object has no attribute 'est_cree_par_fille'"
      ]
     }
    ],
@@ -705,45 +716,39 @@
     "\n",
     "m = Mere()\n",
     "m.une_methode()\n",
-    "print(m.est_cree_par_mere)"
+    "print(m.est_cree_par_mere)\n",
+    "print(m.est_cree_par_fille)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "e564f066",
+   "execution_count": 159,
+   "id": "4faff0af",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "une methode dans fille\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Fille' object has no attribute 'est_cree_par'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [156], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m f \u001b[38;5;241m=\u001b[39m Fille()\n\u001b[1;32m      2\u001b[0m f\u001b[38;5;241m.\u001b[39mune_methode()\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(f\u001b[38;5;241m.\u001b[39mest_cree_par)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Fille' object has no attribute 'est_cree_par'"
+      "dans init mere\n",
+      "dans init fille\n",
+      "une methode dans fille\n",
+      "True\n",
+      "True\n"
      ]
     }
    ],
    "source": [
     "f = Fille()\n",
     "f.une_methode()\n",
-    "print(f.est_cree_par_mere)\n",
-    "print(f.est_cree_par_fille)"
+    "print(f\"{f.est_cree_par_mere=}\")\n",
+    "print(f\"{f.est_cree_par_fille}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70fd9909",
+   "id": "c12a4ec3",
    "metadata": {},
    "outputs": [],
    "source": []
